tests/positive/issue2999.juvix
module issue2999;

type T := t;

fun : T :=
  namedFun@{
    x := t;
  };

namedFun (x : T) : T := t;
