tests/negative/MicroJuvix/Positivity/E9.juvix
module E9;

inductive B {
b : B;
};

inductive T {
  c : ((B → T) -> T) -> T;
};

end;